prodMetadata/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Accepted_TOS_Date__c</fullName>
        <formula>Portal_User__r.Date_of_COV_Terms_and_Conduct_Acceptance__c</formula>
        <label>Accepted TOS Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active_Duty_End_Date__c</fullName>
        <label>Active Duty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Duty_Start_Date__c</fullName>
        <label>Active Duty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Volunteer__c</fullName>
        <label>Active Volunteer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Level__c</fullName>
        <label>Activity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - Superstar</fullName>
                </value>
                <value>
                    <fullName>4 - Active</fullName>
                </value>
                <value>
                    <fullName>3 - Engaged</fullName>
                </value>
                <value>
                    <fullName>2 - Low Level Engagement</fullName>
                </value>
                <value>
                    <fullName>1 - Unengaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_in_the_Last_Year__c</fullName>
        <formula>TODAY()-365 &lt; DATEVALUE(Last_Activity_Date__c)</formula>
        <inlineHelpText>For StepUp</inlineHelpText>
        <label>Activity in the Last Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation_with_Donor_Account__c</fullName>
        <label>Affiliation with Donor Account</label>
        <summaryFilterItems>
            <field>npe5__Affiliation__c.Org_Has_Donated_Flag__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>npe5__Affiliation__c.npe5__Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Age_Number__c</fullName>
        <label>Age (Number)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Range_Formula__c</fullName>
        <formula>IF(Age__c &gt;= 17  &amp;&amp; Age__c &lt;=24, &quot;17 to 24&quot;, 
IF(Age__c &gt;= 25 &amp;&amp; Age__c &lt;= 34, &quot;25 to 34&quot;,
IF(Age__c &gt;= 35  &amp;&amp; Age__c &lt;=44, &quot;35 to 44&quot;,
IF(Age__c &gt;= 45  &amp;&amp; Age__c &lt;=54, &quot;45 to 54&quot;,
IF(Age__c &gt;= 55  &amp;&amp; Age__c &lt;=64, &quot;55 to 64&quot;,
IF(Age__c &gt;= 65 , &quot;65 and up&quot;,&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(NOT(ISBLANK(Birthdate)),FLOOR((TODAY()-Birthdate)/365.2425),IF(NOT(ISBLANK(Age_Number__c)),Age_Number__c,null))</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allied_Service_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>British or French military members who served with us in Iraq/Afghanistan</description>
        <inlineHelpText>British or French military members who served with us in Iraq/Afghanistan</inlineHelpText>
        <label>Allied Service Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Related_Comments__c</fullName>
        <description>Comments to be shown on email that gets sent to member when Paperwork Question/Issue is selected for Paperwork Status.</description>
        <inlineHelpText>Comments to be shown on email that gets sent to member when Paperwork Question/Issue is selected for Paperwork Status.</inlineHelpText>
        <label>Approval Related Comments for Applicant</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>This is the date that a Member Veteran was approved for membership.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attended_Parade_in_the_Last_Year__c</fullName>
        <description>For StepUp</description>
        <formula>TODAY() -365 &lt; Last_Parade_Attendance_Date__c</formula>
        <label>Attended Parade in the Last Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended_an_Event_in_the_last_year__c</fullName>
        <formula>TODAY() -365 &lt; DATEVALUE(Last_VetTogether_Attended__c)</formula>
        <label>Attended an Event in the last year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Phone__c</fullName>
        <description>If a phone number for this contact has been determined to be no longer good, put it here</description>
        <inlineHelpText>If a phone number for this contact has been determined to be no longer good, put it here</inlineHelpText>
        <label>Bad Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bad_Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary physical mailing address is invalid</description>
        <inlineHelpText>Primary physical mailing address is invalid</inlineHelpText>
        <label>Bad Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefits_Packet_Sent_Date__c</fullName>
        <label>Benefits Packet Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefits_System_Link__c</fullName>
        <label>Benefits System Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Bioguide_ID__c</fullName>
        <label>Bioguide ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Memberships__c</fullName>
        <label>Board Memberships</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branch_of_Service__c</fullName>
        <label>Branch of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Marines</fullName>
                </value>
                <value>
                    <fullName>Navy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COV_Cohort__c</fullName>
        <label>COV Cohort</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COV_Date__c</fullName>
        <description>This is the date that a Member Veteran&apos;s Community of Veteran&apos;s profile was approved.</description>
        <label>COV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COV_ID_External__c</fullName>
        <externalId>true</externalId>
        <label>COV ID External</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COV_ID__c</fullName>
        <formula>RIGHT( COV_Link__c, 14)</formula>
        <label>COV ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COV_Link__c</fullName>
        <label>COV Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>COV_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COV Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>COV Sponsorees</relationshipLabel>
        <relationshipName>COV_Sponsoree</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRSC_Qualified__c</fullName>
        <formula>IF(AND(ISPICKVAL(VA_Disability__c,&quot;Yes&quot;), Medical_Retirement__c =TRUE, Combat_Related_Disability__c =TRUE), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRSC Qualified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champion_Media__c</fullName>
        <formula>Cumulative_Ad_Value_Press_Hits_Last_Yr__c &gt;=50000</formula>
        <inlineHelpText>For StepUp: Cumulative value of press hits value of 50K+</inlineHelpText>
        <label>Champion Media</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter</label>
        <referenceTo>Chapter__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Civilian_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Iraqi or American civilians that served with the US Military in Iraq or Afghanistan on a contract basis. i.e. truck drivers, forklift operators, translators, etc.</description>
        <inlineHelpText>Iraqi or American civilians that served with the US Military in Iraq or Afghanistan on a contract basis. i.e. truck drivers, forklift operators, translators, etc.</inlineHelpText>
        <label>Civilian Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clean_Zip_Length__c</fullName>
        <formula>LEN( MA_Clean_Postal_Code__c )</formula>
        <label>Clean Zip Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Alias_Contact_Data__c</fullName>
        <label>C&amp;P Alias Contact Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Account_Number__c</fullName>
        <label>C&amp;P Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Alias_Index__c</fullName>
        <externalId>true</externalId>
        <label>C&amp;P Connect Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Alias__c</fullName>
        <label>C&amp;P Connect Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Global_Rank__c</fullName>
        <label>C&amp;P Patron Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Expiration_date__c</fullName>
        <label>C&amp;P Lift Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Average__c</fullName>
        <label>C&amp;P Average Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Last__c</fullName>
        <label>C&amp;P Last Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Maximum__c</fullName>
        <label>C&amp;P Maximum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Minimum__c</fullName>
        <label>C&amp;P Minimum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Total_Intrinsic__c</fullName>
        <label>C&amp;P Total Personal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Total_extrinsic__c</fullName>
        <label>C&amp;P Total Network Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Connect_Link__c</fullName>
        <formula>IF(CnP_PaaS__CnP_Connect_Alias_Index__c != null, HYPERLINK(&apos;https://Connect.ClickandPledge.com/Fundraiser/&apos;+CnP_PaaS__CnP_Connect_Alias_Index__c, &apos;https://Connect.ClickandPledge.com/Fundraiser/&apos;+CnP_PaaS__CnP_Connect_Alias_Index__c, &apos;_blank&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C&amp;P Connect Global Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Id__c</fullName>
        <label>Deprecated Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Other_Province__c</fullName>
        <label>Deprecated C&amp;P Other Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combat_Related_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combat Related Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Title__c</fullName>
        <description>Should appear in myIAVA after the person&apos;s name in parens (gets copied to the user Company Name field). NOTE - if formula is changed you may have to update corresponding unit tests in cov_profile_controller_TESTS.cls to avoid breaking.</description>
        <formula>trim(

if(ispickval(Portal_User__r.Profile.UserType, &quot;Standard&quot;), &quot;[IAVA] &quot;,
 if( not(Veteran_Member__c) , &quot;Supporter &quot;, 
  if( or(Veteran_Member_Status__c == &quot;Unconfirmed&quot;, Veteran_Member_Status__c == &quot;Disconnected&quot;), &quot; [Unconfirmed] &quot;, &quot;&quot;)
 )
) 
&amp;
if (Veteran_Member__c,
    blankvalue( text(Branch_of_Service__c) , &quot;Veteran&quot;)
    &amp;
    if(or(Veteran_of_OEF__c, Veteran_of_OIF__c, Veteran_of_OND__c), &quot;: &quot;
      &amp;
      if(Veteran_of_OEF__c, &quot;OEF&quot;, &quot;&quot;)
      &amp;
      if(Veteran_of_OIF__c, if(Veteran_of_OEF__c, &quot;/OIF&quot;, &quot;OIF&quot;), &quot;&quot;)
      &amp;  
      if(Veteran_of_OND__c, if(or(Veteran_of_OEF__c, Veteran_of_OIF__c), &quot;/OND&quot;, &quot;OND&quot;), &quot;&quot;)
    , &quot;&quot;)
, &quot;&quot;)

)</formula>
        <inlineHelpText>Should appear in myIAVA after the person&apos;s name in parens (gets copied to the user Company Name field).</inlineHelpText>
        <label>Community Title Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential_Email__c</fullName>
        <description>Confidential Email is for sensitive contacts whose contact information will not be seen or accessible to staff without specific clearance</description>
        <inlineHelpText>Confidential Email is for sensitive contacts whose contact information will not be seen or accessible to staff without specific clearance</inlineHelpText>
        <label>Confidential Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Confidential_Phone__c</fullName>
        <description>Phone Number displayed only to staff with clearance to see confidential contact info</description>
        <inlineHelpText>Phone Number displayed only to staff with clearance to see confidential contact info</inlineHelpText>
        <label>Confidential Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Confidential_Street_Address__c</fullName>
        <description>Street Address that will only be visible to staff with clearance</description>
        <inlineHelpText>Street Address that will only be visible to staff with clearance</inlineHelpText>
        <label>Confidential Street Address</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_Staffer_Details__c</fullName>
        <label>Congressional Staffer Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Congressional_Staffer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Congressional Staffer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conservative_Media_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conservative Media Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consider_Deleting_this_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the contact record does not appear to be valid</description>
        <inlineHelpText>Checked if the contact record does not appear to be valid</inlineHelpText>
        <label>Consider Deleting this Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID_18_digits__c</fullName>
        <description>Contact ID - 18-digit version</description>
        <formula>CASESAFEID( Id )</formula>
        <label>Contact ID (18 digits)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID_formula__c</fullName>
        <description>Contact ID via a formula field so it can show up on the Contact page layout.</description>
        <formula>Id</formula>
        <label>Contact ID formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Primary_Mailing_List__c</fullName>
        <description>Automatically set in this order of priority: Confirmed Member, Press Contact, DC Contact, Unconfirmed Member, and if none of these are true, Supporter</description>
        <formula>IF( No_Email_Blasts__c  , &quot;Don&apos;t Email Blast&quot; ,
IF( HasOptedOutOfEmail  ,&quot;Opted Out&quot; ,
IF( ISBLANK( Email ) , &quot;No Email&quot; ,
IF(  Veteran_Member_Status__c = &quot;Confirmed&quot;,&quot;Confirmed Member&quot;,
IF( Press_Contact__c ,&quot;Press Contact&quot;,
IF(  not(isblank(kw__KnowWhoId__c))  ,&quot;DC Contact&quot;,
IF( Veteran_Member__c ,  Veteran_Member_Status__c &amp; &quot; Member&quot;,&quot;Supporter&quot;
)))))))</formula>
        <inlineHelpText>Automatically set in this order of priority: Confirmed Member, Press Contact, DC Contact, Unconfirmed Member, and if none of these are true, Supporter</inlineHelpText>
        <label>Contact Primary Mailing List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Turning this flag on would trigger creation of a IAVA Plus Portal user for this contact if this is a confirmed IAVA member and no portal user exists for this member.</inlineHelpText>
        <label>Create Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cumulative_Ad_Value_Press_Hits_Last_Yr__c</fullName>
        <description>For StepUp</description>
        <label>Cumulative Ad Value Press Hits Last Yr</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currently Serving</fullName>
                </value>
                <value>
                    <fullName>Separated/Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_1__c</fullName>
        <label>Departure Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_2__c</fullName>
        <label>Depature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_3__c</fullName>
        <label>Departure Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DC_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DC Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DIA_ID__c</fullName>
        <externalId>true</externalId>
        <label>DIA ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIA_Received_Email__c</fullName>
        <label>DIA Received Email</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataMatch_Age__c</fullName>
        <label>(DataMatch) Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataMatch_City__c</fullName>
        <label>(DataMatch) City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataMatch_Conservative_Donor_Household__c</fullName>
        <label>(DataMatch) Conservative Donor Household</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataMatch_County__c</fullName>
        <label>(DataMatch) County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataMatch_Date__c</fullName>
        <description>DataMatch fields will be for data gathered from external enhanced data services.</description>
        <inlineHelpText>DataMatch fields will be for data gathered from external enhanced data services.</inlineHelpText>
        <label>DataMatch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DataMatch_Desription__c</fullName>
        <description>Latest Provider of DataMatch Enhanced Data</description>
        <inlineHelpText>Latest Provider of DataMatch Enhanced Data</inlineHelpText>
        <label>DataMatch Desription</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataMatch_Disc_Income_Formula__c</fullName>
        <label>(DataMatch) Disc Income Formula</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataMatch_Est_Household_Income_Formula__c</fullName>
        <label>(DataMatch) Est Household Income Formula</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataMatch_Ethnicity__c</fullName>
        <label>(DataMatch) Ethnicity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataMatch_Gender__c</fullName>
        <label>(DataMatch) Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataMatch_Liberal_Donor_Household__c</fullName>
        <label>(DataMatch) Liberal Donor Household</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataMatch_Personicx_Cluster_Code__c</fullName>
        <label>(DataMatch) Personicx Cluster Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataMatch_Personicx_Lifestage_Code__c</fullName>
        <label>(DataMatch) Personicx Lifestage Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataMatch_State__c</fullName>
        <label>(DataMatch) State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataMatch_Street_Address__c</fullName>
        <label>(DataMatch) Street Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataMatch_Underbanked_Inidicator__c</fullName>
        <label>(DataMatch) Underbanked Inidicator</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataMatch_Vet_in_Household__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(DataMatch) Vet in Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataMatch_Zip_Code__c</fullName>
        <label>(DataMatch) Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_from_Documents_to_Approval__c</fullName>
        <description>Number of days between when documents uploaded and paperwork approved (only applies to confirmed members)</description>
        <formula>VALUE(if(or(isblank( Approved_Date__c  ),isblank( Documents_Date__c )),&quot;&quot;, text(Approved_Date__c - Documents_Date__c )))</formula>
        <inlineHelpText>Number of days between when documents uploaded and paperwork approved (only applies to confirmed members)</inlineHelpText>
        <label>Days from Documents to Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Signup_to_Documents__c</fullName>
        <description>Number of days between the Signup Date and the Documents Date</description>
        <formula>VALUE(if(or(isblank( Signup_Date__c ),isblank( Documents_Date__c )),&quot;&quot;, text(Documents_Date__c - Signup_Date__c)))</formula>
        <inlineHelpText>Number of days between the Signup Date and the Documents Date</inlineHelpText>
        <label>Days from Signup to Documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Signup_to_Reminder_Start__c</fullName>
        <description>Field used to enable mass emailing to backlog of Vets who have not submitted paperwork.  Automated workflow started on 7/28/10, so manual emailing is not required after that date.  This field is used in the Mass Email views in order to divide up the backlog into manageable groups of less than 500 (Salesforce limit of emails in one mass email).</description>
        <formula>DATEVALUE(&quot;2010-07-28&quot;) -  Signup_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Signup to Reminder Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_last_Activity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <label>Days since last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_End_Date__c</fullName>
        <label>Deployment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Date__c</fullName>
        <label>Deployment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_Not_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did not (or has not yet) deployed as part of OEF/OIF/OND post-9/11</description>
        <inlineHelpText>Did not (or has not yet) deployed as part of OEF/OIF/OND post-9/11</inlineHelpText>
        <label>Did Not Deploy (post 9/11)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if a contact is deceased, or requested that we don&apos;t send them mail.</description>
        <inlineHelpText>Check this if a contact is deceased, or requested that we don&apos;t send them mail.</inlineHelpText>
        <label>Direct Mail OptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discharge_Status__c</fullName>
        <label>Discharge Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honorable</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Other than Honorable</fullName>
                </value>
                <value>
                    <fullName>Bad Conduct</fullName>
                </value>
                <value>
                    <fullName>Dishonorable</fullName>
                </value>
                <value>
                    <fullName>Medical Retirement</fullName>
                </value>
                <value>
                    <fullName>Medical Discharge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_Date__c</fullName>
        <description>This is the date that a prospective Member Veteran&apos;s paperwork was added to their record.</description>
        <label>Documents Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Year_Max__c</fullName>
        <formula>Account.Donation_Year_Max__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donation Year Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donor_Formula__c</fullName>
        <formula>IF( npe01__Lifetime_Giving_History_Amount__c  &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000000v4dy&quot;, &quot;True&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000000v4eM&quot;, &quot;False&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Level__c</fullName>
        <formula>IF( npe01__Type_of_Account__c  = &quot;Individual&quot;, Account.Donor_Level__c,&quot;N/A&quot;)</formula>
        <inlineHelpText>Low = Less than $100 in a given year
Medium = $100 - $499 in a given year
High = $500 - $4,999 in a given year
Top = $5,000+ in a given year</inlineHelpText>
        <label>Donor Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donor_Notes__c</fullName>
        <label>Donor Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donor (deprec)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drivers_License__c</fullName>
        <description>Contacts drivers license</description>
        <inlineHelpText>Contacts drivers license</inlineHelpText>
        <label>Drivers License #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dupe_Check_Date__c</fullName>
        <description>Last date this contact was checked for duplicates, including those with variations on the first name.</description>
        <inlineHelpText>Last date this contact was checked for duplicates, including those with variations on the first name.</inlineHelpText>
        <label>Dupe Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dupewinner__c</fullName>
        <label>Dupewinner</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receives Email</fullName>
                </value>
                <value>
                    <fullName>Inactive Email</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>